--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "axios": "^1.4.0",
     "typescript": "^5.1.3"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/noraincode/smsbao"
+  },
   "scripts": {
     "test": "ts-jest",
     "build": "tsc"
