--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,11 @@
-name: Publish to NPM
+name: Release package
 on:
-  release:
-    types: [created]
+  workflow_dispatch:
+    inputs:
+      release-type:
+        description: 'Release type (one of): patch, minor, major, prepatch, preminor, premajor, prerelease'
+        required: true
+        
 jobs:
   build:
     runs-on: ubuntu-latest
